--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -20,14 +20,12 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.task_manager"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
+        applicationId "com.example.task_manager" // Replace with your package name
+        minSdkVersion 23 // Update this line to 23
+        targetSdkVersion 33
+        versionCode 1
+        versionName "1.0"
+    
     }
 
     buildTypes {
